Remove min width from table component, prevent sidebar overlap (#1804)

--- a/src/components/blocks/table/Table.module.css
+++ b/src/components/blocks/table/Table.module.css
@@ -1,6 +1,5 @@
 .table {
   line-height: 23px;
-  min-width: 754px;
 }
 
 .tableContainer {
